# pm-champion-dashboard

./: .gitignore  README.md  main.py  pm-champion-dashboard.spec  pyproject.toml
assets/: 21-MPS board Print.xlsx  26-MPS board Print.xlsx  DB.csv  DH_2025-01-29_15-47_Packer21_Maker21.csv  DH_2025-10-07_16-38_Packer21_Maker21.csv  EXPORT_20251126_011956.XLSX
assets/spa/: 1.html  10.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  response.html  response1.html  response2.html
src/: app.py
src/components/: side_tab_notebook.py
src/services/: bde_data_service.py  dh_data_service.py  mps_data_service.py  rnm_data_service.py
src/ui/: bde_ui.py  dh_ui.py  mps_ui.py  rnm_ui.py
src/utils/: app_config.py  helpers.py  rnm_helpers.py  rnm_ui_helpers.py  spa_processor.py
tests/: test_dh_multi_file.py  test_mps_data_service.py  test_rnm_ui.py  test_rnm_ui_helpers.py
