[project]
name = "pm-champion-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-tkinter-loop>=0.10.3",
    "bs4>=0.0.2",
    "fastexcel>=0.17.2",
    "httpx>=0.28.1",
    "httpx-ntlm>=1.4.0",
    "polars>=1.35.2",
    "qrcode>=8.2",
    "tabulate>=0.9.0",
    "ttkbootstrap>=1.19.0",
]

[dependency-groups]
dev = ["auto-py-to-exe>=2.48.1", "pytest>=9.0.1"]
